# Phase-field

./: Ferroelectric-Phasefield_memo.txt  Programming_Phase-Field_Modeling_memo.txt  README.md  phase-field-crystal-mpi_memo.txt
Biner_lab_inl/: readme.txt
Biner_lab_inl/Appendix/voronoi_2d/: CMakeLists.txt  Discrete_Voronoi_diagram_2d.c  readme.txt  voronoi_2d.c  write_vtk_grid_values_2D.c
Biner_lab_inl/Appendix/voronoi_3d/: CMakeLists.txt  Discrete_Voronoi_diagram_3d.c  readme.txt  voronoi_3d.c  write_vtk_grid_values_3D.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ca_2d/: CMakeLists.txt  fc_ca_2d.c  fd_ca_2d.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ca_2d/fd_ca_2d/: write_vtk_grid_values_2D.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ca_2d/fd_ca_2d_cuda_v1.0_failed/: CMakeLists.txt  fd_ca_2d_cuda.cu
Biner_lab_inl/chapter4/dynamic_memory/fd_ca_3d/: CMakeLists.txt  fc_ca_3d.c  fd_ca_3d.c  free_energy_fd_ca_3d.c  init_grain_micro_3d.c  readme.txt  write_vtk_grid_values_3D.c
Biner_lab_inl/chapter4/dynamic_memory/fd_cell_dyna_2d/: CMakeLists.txt  fd_cell_dyna_2d.c  free_energy_2d.c  micro_poly_cell_2d.c  write_vtk_grid_values_2D.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ch_2d/: CMakeLists.txt  fc_ch_2d.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ch_2d/fd_ch_2d/: calculate_energy_2d.c  fd_ch_2d.c  free_energy_ch_2d.c
Biner_lab_inl/chapter4/dynamic_memory/fd_ch_2d/fd_ch_2d_cuda_v1.0/: CMakeLists.txt  fd_ch_2d_cuda.cu  readme.txt
Biner_lab_inl/chapter4/dynamic_memory/fd_ch_3d_test/: CMakeLists.txt  fd_ch_3d.c  readme.txt
Biner_lab_inl/chapter4/dynamic_memory/fd_sint_2d/: CMakeLists.txt  fd_sint_2d.c  free_energy_sint_2d_con.c  free_energy_sint_2d_eta.c  micro_sint_pre_2d.c  readme.txt
Biner_lab_inl/chapter4/static_memory/fd_den_2d/: CMakeLists.txt  fd_den_2d.c  nucleus_2d.c  readme.txt
Biner_lab_inl/chapter5/dynamic_memory/fft_FeCr_2d/fft_FeCr_2d_v1.1/: CMakeLists.txt  solve_elasticity_2d.c
Biner_lab_inl/chapter5/dynamic_memory/fft_FeCr_3d/fft_FeCr_3d_cufft_and_lfftw3_hybrid_v1.2/: CMakeLists.txt  dislo_strain_3d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_FeCr_3d/fft_FeCr_3d_v1.0/: CMakeLists.txt  fft_FeCr_3d.c  readme.txt  solve_elasticity_3d.c
Biner_lab_inl/chapter5/dynamic_memory/fft_FeCuMnNi_2d/fft_FeCuMnNi_2d_cufft_v1.0/: CMakeLists.txt  init_FeCuMnNi_micro_2d.cu  readme.txt
Biner_lab_inl/chapter5/dynamic_memory/fft_ca_2d/fft_ca_2d_cufft_v1.0/: CMakeLists.txt  fft_ca_2d_cufft.cu  free_energy_fd_ca_2d.cu  init_grain_micro_2d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_ca_3d/fft_ca_3d_cufft_v1.1/: CMakeLists.txt  fft_ca_3d_cufft.cu  free_energy_fd_ca_3d.cu  init_grain_micro_3d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_ch_2d/fft_ch_2d_v1.0/: CMakeLists.txt  fft_ch_2d.c  micro_ch_pre_2d.c
Biner_lab_inl/chapter5/dynamic_memory/fft_ch_3d/fft_ch_3d_v1.0/: CMakeLists.txt  fft_ch_3d.c  readme.txt
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/: CMakeLists.txt  Memo.txt  fft_raft_2d.c  green_tensor_2d.c  readme.txt  solve_elasticity_2d.c
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_and_lfftw3_hybrid_v1.0/: fft_raft_2d_cufft.cu  solve_elasticity_2d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_and_lfftw3_hybrid_v1.1/: fft_raft_2d_cufft.cu  free_energy_ch_2d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_and_lfftw3_hybrid_v1.2/: fft_raft_2d_cufft.cu  green_tensor_2d.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_v1.0/: fft_raft_2d_cufft.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_v1.1/: fft_raft_2d_cufft.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_cufft_v1.2/: CMakeLists.txt  fft_raft_2d_cufft.cu
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_2d/fft_raft_2d_mpi_failed/: CMakeLists.txt  fft_raft_2d_mpi.c  green_tensor_2d_mpi.c  readme.txt  solve_elasticity_2d_mpi.c
Biner_lab_inl/chapter5/dynamic_memory/fft_raft_3d/fft_raft_3d_cufft_and_lfftw3_hybrid_v1.2/: CMakeLists.txt  solve_elasticity_3d.cu  write_vtk_grid_values_3D.cu
Biner_lab_inl/chapter5/static_memory/fft_FeCuNiMn_2d/: CMakeLists.txt  fft_FeCuMnNi_2d.c
Biner_lab_inl/chapter6/static_memory/fem_ch_2d/: CMakeLists.txt  apply_periodic_bc_2d.c  cart_deriv_2d.c  chem_stiff_2d.c  fem_ch_2d.c  free_energy_fem_2d.c  gauss_2d.c  init_micro_ch_fem_2d.c  input_fem_pf_2d.c  periodic_boundary_2d.c  readme.txt  recover_slave_dof_2d.c  sfr2_2d.c  write_vtk_fem_2d.c
Biner_lab_inl/chapter6/static_memory/fem_elast_2d/: CMakeLists.txt  bmats_2d.c  boundary_cond_2d.c  dbe_2d.c  fem_elast_2d.c  gauss_2d.c  input_fem_elast_2d.c  jacob2_2d.c  loads_2d.c  modps_2d.c  output_2d.c  output_fem_2d.c  readme.txt  sfr2_2d.c  stiffness_2d .c  stiffness_2d.c  stress_2d.c  write_vtk_fem_2d.c
Biner_lab_inl/chapter6/static_memory/fem_elast_2d_failed/: CMakeLists.txt  bmats_2d.c  dbe_2d.c  jacob2_2d.c  modps_2d.c  readme.txt  stress_2d.c  write_vtk_fem_2d.c
Biner_lab_inl/chapter7/dynamic_memory/pfc_3d _mpi_omp/: CMakeLists.txt  pfc_3d_mpi.c  readme.txt  write_vtk_grid_values_3D_v3.c
Biner_lab_inl/chapter7/static_memory/pfc_3d/: CMakeLists.txt  pfc_3d.c  write_vtk_grid_values_3D.c
Biner_lab_inl/chapter7/static_memory/pfc_def_2d_mpi/: CMakeLists.txt  pfc_def_2d.c  pfc_def_2d_mpi.c
Koyama_lab_nu/: readme.txt
Takaki_lab_kit/: readme.txt
Takaki_lab_kit/ubuntu_version/Accelerate_phase-field_simulation_with_GPU/2d/: CMakeLists.txt  main-cpu.cu  main-cpu_2d.cu  main-gpu.cu  main-gpu_2d.cu  main-shared.cu  main-shared_2d.cu  main-shared_2d_other_version.cu  main-shared_other_version.cu  readme.txt
Takaki_lab_kit/ubuntu_version/Accelerate_phase-field_simulation_with_GPU/2d/main-cpu_2d/: CMakeLists.txt  main-cpu_2d.cu
Takaki_lab_kit/ubuntu_version/Accelerate_phase-field_simulation_with_GPU/2d/main-gpu_2d/: CMakeLists.txt  main-gpu_2d.cu  write_vtk_grid_values_2D.cu
Takaki_lab_kit/ubuntu_version/Accelerate_phase-field_simulation_with_GPU/2d/main-shared_2d/: CMakeLists.txt  main-shared_2d.cu  main-shared_2d_old.cu
Yamanaka_lab_tuat/: readme.txt
(+787 files in other folders)
